<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="kenshii.masterii.Activity_Login">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout android:id="@+id/email_register_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/register_name" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_name"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" android:textColor="#000000"/>

                <AutoCompleteTextView android:id="@+id/register_email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" android:textColor="#000000"/>

                <EditText android:id="@+id/register_password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:inputType="textPassword" android:maxLines="1"
                    android:singleLine="true" android:textColor="#000000"/>

                <EditText android:id="@+id/register_passwordconfirm" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_passwordconfirm"
                    android:inputType="textPassword" android:maxLines="1"
                    android:singleLine="true" android:textColor="#000000"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="REMEMBER ME"
                    android:id="@+id/register_remember"
                    android:layout_marginTop="5dp" />

                <Button
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Register"
                    android:id="@+id/button"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onRegClick" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

